manifests/registry/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: registry-service
  namespace: registry
spec:
  selector:
    app: registry
  type: ClusterIP
  ports:
    - name: docker-port
      protocol: TCP
      port: 5000
      targetPort: 5000
