manifests/registry/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod-dns01
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"    
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header X-Forwarded-Proto https;
  name: ingress-registry
  namespace: registry
spec:
  ingressClassName: nginx
  rules:
  - host: registry.lan.ccrow.org
    http:
      paths:
      - backend:
          service:
            name: registry-service
            port:
              number: 5000
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - registry.lan.ccrow.org
    secretName: registry-tls
